* New convergence criterion: isothermal equilibrium (Mikki 2008, Chapter 3).
* Clerc's method: constriction factor chi to prevent explosive divergence of swarm.
* Swarm coherence and collision-avoidance parameters?
* Detect and eliminate dependent (i.e. redundant) linear constraints.
* Implement multiobjective optimization option; find Pareto front.

ver 20130515:
* Merged back changes from version 20100818 which did not make it into ver 20130502
* Fixed error with constraint enforcement method set to 'penalize' with an unconstrained problem.
* Slight modification to penalty calculation method to prevent infeasible points from being selected over feasible points when selecting the global best.
* Default constraint enforcement method is now 'penalize'. Since this is a relatively new feature, please double-check the feasibility of solutions to your constrained problems before accepting results for mission-critical applications.
* Documentation updated in PSOOPTIMSET help file.
* Plotting axes should no longer cause errors if options.PlotInterval > 1 (suggestion made by Ziqiang (Kevin) Chen, 13 Nov 2012)

ver 20130502:
* Added a new constraint handling method: 'penalize', described in Perez 2007. Both nonlinear inequality and equality constraints can now be handled gracefully by this toolbox. It also works well for handling linear and bounded constraints. If there are no problems reported after a certain amount of time "in the wild", this will become the default constraint handling method.

ver 20100818:
* Added a note in the documentation suggesting that social and cognitive attraction parameters should have a sum of less than 4, as demonstrated by Perez 2007. A warning message appears (but the optimization continues) if the user defines an unstable swarm.